--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Client</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body >
+    <div id="root" style="width: 100%; height: 100%"></div>
   </body>
 </html>
